<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    tools:context=".UserDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserDetailActivity"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewLabelInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:text="@string/user_information"
            android:textSize="24sp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelInfo"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/textViewLabelLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelLogin"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

        <TextView
            android:id="@+id/textViewLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:text="@string/id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelId"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

        <TextView
            android:id="@+id/textViewLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewId" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelName"
            app:layout_constraintTop_toBottomOf="@+id/textViewId" />

        <TextView
            android:id="@+id/textViewLabelBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/blog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewBlog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelBlog"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewLabelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBlog" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelLocation"
            app:layout_constraintTop_toBottomOf="@+id/textViewBlog" />

        <TextView
            android:id="@+id/textViewLabelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelEmail"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

        <TextView
            android:id="@+id/textViewLabelBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/biography"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <TextView
            android:id="@+id/textViewBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelBio"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <TextView
            android:id="@+id/textViewLabelPublicRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rublic_repos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBio" />

        <TextView
            android:id="@+id/textViewPublicRepos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelPublicRepos"
            app:layout_constraintTop_toBottomOf="@+id/textViewBio" />

        <TextView
            android:id="@+id/textViewLabelPublicGists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/public_gists"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPublicRepos" />

        <TextView
            android:id="@+id/textViewPublicGists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelPublicGists"
            app:layout_constraintTop_toBottomOf="@+id/textViewPublicRepos" />

        <TextView
            android:id="@+id/textViewLabelFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/followers"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPublicGists" />

        <TextView
            android:id="@+id/textViewFollowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelFollowers"
            app:layout_constraintTop_toBottomOf="@+id/textViewPublicGists" />

        <TextView
            android:id="@+id/textViewLabelFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            android:text="@string/following"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowers" />

        <TextView
            android:id="@+id/textViewFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelFollowing"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowers" />

        <TextView
            android:id="@+id/textViewLabelCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            android:text="@string/created_at"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowing" />

        <TextView
            android:id="@+id/textViewCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelCreated"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowing" />

        <TextView
            android:id="@+id/textViewLabelUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/updated_at"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreated" />

        <TextView
            android:id="@+id/textViewUpdated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelUpdated"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreated" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>